# ac215_project_dev

./: .env.template  .gitignore  Makefile  README.md  compose.yaml  dvc.yaml  requirements.txt  run_pipeline.bat
.github/workflows/: README  backend-cd.yml  backend-ci-cd.yml  backend-ci.yml  ci.yml  frontend-cd.yml  frontend-ci-cd.yml  frontend-ci.yml
AgriGuard-UI/: README.md  design_guidelines.md
AgriGuard-UI/client/: index.html
LLM/rag-ingest/: Dockerfile  README.md  main.py  pyproject.toml  run.sh
ML/: README.md  data_ingestion_readme.txt
ML/api/: Dockerfile  app.py  pyproject.toml  requirements.txt
ML/api/api/: requirements.txt
ML/data-ingestion/: Dockerfile  pyproject.toml  requirements.txt
ML/data-ingestion/src/utils/: __init__.py
ML/data-preprocessing/: Dockerfile
ML/model-stress-detection/: docker-shell.ps1
ML/model-yield-forecasting/: Dockerfile  docker-shell.ps1
ML/preprocessing/: .dockerignore  Dockerfile
ML/workflow/: Dockerfile  pyproject.toml  run_workflow.py
ML/workflow/.github/workflows/: ci.yml
agriguard-rag/: ChatInterface.tsx  Corn_Stress_Remote_Sensing_Guide.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_GUIDE.md  README.md  deploy_rag.sh  requirements-rag.txt
agriguard_app/: .dockerignore  docker-compose.yaml  docker-compose.yml  docker-shell.sh
agriguard_app/backend/: Dockerfile  main.py
agriguard_app/frontend/: package-lock.json  package.json
analytics/mcsi/: README.md  requirements_mcsi.txt
analytics/model/: Dockerfile.yield  README_YIELD_FORECAST.md  yield_forecast_service.py
api/: api_orchestrator.py  app.py
backend-api/: Dockerfile  README.md  README_API_SERVICE.md  api_extended.py  api_extended.py.backup  api_extended_demo.py.backup  deploy_rag_fixed.sh  fix_clean_data_path.py  fix_columns.py  fix_parquet.py  fix_startup.py  implement_real_yield_predictor.py  ingest_documents.py  patch_real.py  rag_chat.py  remove_duplicate.py  requirements-rag.txt  requirements.txt  update_predict_for_weekly.py
data-ingestion/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-shell.ps1
data-ingestion/configs/: data_config.yaml
data-ingestion/src/: __init__.py  download_yield_data.py
data-preprocessing/: docker-shell.ps1  requirements.txt
data-preprocessing/configs/: preprocessing_config.yaml
data-preprocessing/src/: preprocess_data.py
data/validation/: quality_checker.py
data_cleaning_container/: Dockerfile  README_data_cleaner.md  requirements.txt
data_cleaning_container/src/: clean_data.py
data_ingestion/individual-downloaders/: Dockerfile.eto  Dockerfile.lst  Dockerfile.ndvi  Dockerfile.pr  Dockerfile.template  Dockerfile.update_eto  Dockerfile.update_eto.txt  Dockerfile.update_pr  Dockerfile.update_pr.txt  Dockerfile.vpd  deploy_all.sh  deploy_eto_pr.sh  deploy_eto_pr_updates.sh  deploy_incremental_updates.sh  merge_eto.py  requirements.txt  requirements_incremental.txt  (+4 more)
data_service/: pipeline_complete.py  requirements.txt
deployment/: Dockerfile.frontend  README.md  deploy.sh  test_api.sh
docs/: APPLICATION_DESIGN.md  DATA_VERSIONING.md  MODEL_TRAINING_SUMMARY.md
frontend/: next.config.js  package.json
frontend-app/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
mcsi-ml-deployment/: .env.template  .gitignore  README.md  README_DEPLOYMENT.md  README_mcsi_ml.md  README_mcsi_ml_UPDATED.md  deploy.sh  deploy_fixed.sh  fix_api.py  fix_deploy.sh  fix_train.py  organize_files.sh  requirements-test.txt  run_tests.sh  setup_python_env.sh  verify_deployment.sh
model-stress-detection/: Dockerfile  requirements.txt
model-yield-forecasting/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
preprocessing/: .env  README.md  docker-compose.yml  docker-shell.ps1  docker-shell.sh  docker_shell_ps1  pyproject.toml
preprocessing/src/preprocessing/: compute_anomalies.py  run_preprocessing.py
preprocessing/src/utils/: gcs_utils.py
rag/: Dockerfile.rag  load_documents.py  requirements.txt
rag-pipeline/: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  docker-shell.sh  gcs_manager.py  preprocessing.py  pyproject.toml  rag_cli.py  rrf_hybrid.py  semantic_splitter.py  vector_store.py
src/: docker-compose.yml  github_workflows_ci.yml
stress_detection/: Dockerfile  Makefile  README.md  requirements.txt
tests/: test_api_orchestrator.py  test_rag_service.py
workflow/: run_workflow.py
(+211 files in other folders)
