[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agriguard-ingest"
version = "0.1.0"
description = "Iowa Agronomy RAG: Ingestion & Chunking Service"
readme = "README.md"
requires-python = ">=3.12,<3.13"

# Main runtime deps 
dependencies = [
  "llama-index==0.10.62",
  "llama-index-llms-openai==0.1.30",
  "llama-index-embeddings-huggingface==0.2.1",
  "requests==2.32.3",
  "pypdf==4.3.1",
  "trafilatura==1.6.3",
  "google-cloud-storage==2.18.2",
  "python-dotenv==1.0.1",
  "ftfy>=6.1.1",
  "charset-normalizer>=3.3.2"
]

# Creates a console command `ingest` that calls main()
[project.scripts]
ingest = "main:main"

# Tell setuptools packaging a single module file (no src/ package needed)
[tool.setuptools]
py-modules = ["main"]