[project]
name = "agriguard-api"
version = "0.1.0"
description = "Minimal API for AgriGuard MS2"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pandas>=2.2",
  "pyarrow>=16.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.org/simple"
