[project]
name = "agriguard-workflow"
version = "0.1.0"
description = "Orchestrates the end-to-end pipeline by calling other containers."
requires-python = ">=3.11,<3.12"
dependencies = [
  "click>=8.1",
  "rich>=13.7",
]

[build-system]
requires = ["uv>=0.4.0"]
build-backend = "uv.build"

[tool.uv]
index-url = "https://pypi.org/simple"
